--- a/index.html
+++ b/index.html
@@ -5,5 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevRibeiro</title>
   </head>
-  <body></body>
+  <body>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <lottie-player
+      src="https://assets9.lottiefiles.com/packages/lf20_rbtawnwz.json"
+      background="transparent"
+      speed="1"
+      style="width: 400px; height: 400px"
+      loop
+      controls
+      autoplay
+    ></lottie-player>
+  </body>
 </html>
