card grid estruturado

--- a/index.html
+++ b/index.html
@@ -3,18 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="style.css" />
     <title>DevRibeiro</title>
   </head>
   <body>
+    <main>
+        <div class="container">
+          <div class="apple-grid">
+            <div class="brand card">
+              <div class="brand_logo flex">
+                <!-- LOGO DEVRIBEIRO -->
+                <img src="./assets/logo_dev.svg" alt="logotipo devribeiro">
+              </div>
+            </div>
+            <div class="welcome card">Bem-vindo</div>
+            <div class="profile card">
+              <div class="profile_avatar">Imagem</div>
+              <div class="profile_name">Nome</div>
+              <div class="profile_about">Sobre mim</div>
+            </div>
+            <div class="resume card">
+              <div class="resume-text">Baixe meu currículo</div>
+              <img src="" alt="imagem seta para baixo">
+            </div>
+            <div class="mail card flex">
+              <div class="mail_img">
+                <img src="./assets/mail.svg" alt="imagem endereço de email">
+              </div>
+            </div>
+            <div class="hello card flex">
+              <div class="hello-message flex">
+                <span>hello world,</span>
+                <span>DevRibeiro</span>
+              </div>
+            </div>
+            <div class="projects card">Projetos</div>
+            <div class="stacks card">Habilclassades</div>
+            <div class="depoiments card">Depoimentos</div>
+            <div class="blank card">Aberto</div>
+            <div class="contact card">Contatos</div>
+        </div>
+      </section>
+    </main>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <lottie-player
-      src="https://assets9.lottiefiles.com/packages/lf20_rbtawnwz.json"
-      background="transparent"
-      speed="1"
-      style="width: 400px; height: 400px"
-      loop
-      controls
-      autoplay
-    ></lottie-player>
   </body>
 </html>
+
+<!-- 
+
+
+  <div class="animation">
+          <lottie-player
+            src="https://assets9.lottiefiles.com/packages/lf20_rbtawnwz.json"
+            background="transparent"
+            speed=".8"
+            loop
+            autoplay
+          ></lottie-player>
+        </div>
+        <progress class="progress-bar" max="100" value="30">30%</progress>
+      </div>
+
+ -->
