teste de tooltip nas habilidade

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
           <section class="stacks card flex pd-1">
             <span class="title gradient">Habilidades</span>
             <div class="stacks-icons flex">
-              <div class="html5 ico flex">
+              <div
+                class="html5 ico flex"
+                data-tooltip="Bons conhecimentos na linguagem de marcação"
+              >
                 <svg
                   width="52"
                   height="52"
@@ -112,7 +115,10 @@
                   />
                 </svg>
               </div>
-              <div class="css3 ico flex">
+              <div
+                class="css3 ico flex"
+                data-tooltip="Bons conhecimentos na linguagem de estilização"
+              >
                 <svg
                   width="26"
                   height="30"
@@ -344,6 +350,7 @@
                 target="_blank"
                 ><img src="./assets/whatsapp.svg" alt="icone whatsapp"
               /></a>
+              <span class="title">Contato</span>
             </div>
           </section>
         </div>
