ajustando section habilidades

--- a/index.html
+++ b/index.html
@@ -28,25 +28,20 @@
             </div>
           </section>
           <section class="welcome card flex pd-1">
-            <p class="gradient">Bem-Vindo</p>
+            <p>Bem-Vindo</p>
           </section>
           <section class="profile card flex">
             <div class="profile-avatar"></div>
             <div class="profile-name">
-              <h2 class="gradient">Rafael Ribeiro Alves</h2>
+              <h2 class="">Rafael Ribeiro Alves</h2>
               <h3>Desenvolvedor Front-end</h3>
             </div>
             <div class="profile-about">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Pariatur voluptatum repellendus harum, facilis tempore
-                voluptates libero qui ex sint exercitationem sed beatae ducimus
-                nisi vitae. Exercitationem architecto neque expedita nobis.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-                hic sed numquam dignissimos rerum. Officia sequi impedit
-                reprehenderit autem quis quidem. Inventore adipisci quo soluta
-                optio aliquam quae eos qui. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit.
+                Olá, meu nome é Rafael Ribeiro Alves, nascido em 1987 sou
+                formado em análise e desenvolvimento de sistemas pela Estácio
+                Uni Radial, amante do desenvolvimento web e interfaces bonitas,
+                comprometido e responsável com o trabalho e clientes...
               </p>
             </div>
           </section>
@@ -57,21 +52,23 @@
             /></a>
           </section>
           <section class="mail card flex pd-1">
-            <div class="mail-img">
-              <img src="./assets/mail.svg" alt="imagem endereço de email" />
-              <div class="image">
+            <div class="overlay flex">
+              <p>Copiar e-mail</p>
+              <input type="text" value="rafael@devribeiro.com" class="copy-mail"></input>
+              <button class="copy">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="20"
                   height="20"
-                  fill="#888888"
+                  fill="#FFFFFF"
                   viewBox="0 0 256 256"
                 >
                   <path
                     d="M216,28H88A12,12,0,0,0,76,40V76H40A12,12,0,0,0,28,88V216a12,12,0,0,0,12,12H168a12,12,0,0,0,12-12V180h36a12,12,0,0,0,12-12V40A12,12,0,0,0,216,28ZM156,204H52V100H156Zm48-48H180V88a12,12,0,0,0-12-12H100V52H204Z"
                   ></path>
                 </svg>
-              </div>
+              </button>
+
             </div>
           </section>
           <section class="hello card flex pd-1">
@@ -81,10 +78,10 @@
             </div>
           </section>
           <section class="projects card flex pd-1">
-            <span class="title gradient">Projetos</span>
+            <span class="title">Projetos</span>
           </section>
           <section class="stacks card flex pd-1">
-            <span class="title gradient">Habilidades</span>
+            <span class="title">Habilidades</span>
             <div class="stacks-icons flex">
               <div
                 class="html5 ico flex"
@@ -322,15 +319,18 @@
                 </svg>
               </div>
             </div>
+            <div class="description flex">
+              <p>Nos planos de estudo</p>
+            </div>
           </section>
           <section class="depoiments card flex pd-1">
-            <span class="title gradient">Depoimentos</span>
+            <span class="title">Depoimentos</span>
           </section>
           <section class="select-mode card flex pd-1">
             <div class="avatar">
               <img src="./assets/memoji-glasses.svg" alt="avatar sem oculos" />
             </div>
-            <div class="toggle title gradient">switch</div>
+            <div class="toggle title">switch</div>
           </section>
           <section class="contact card flex">
             <div class="contacts-card flex">
@@ -350,25 +350,14 @@
                 target="_blank"
                 ><img src="./assets/whatsapp.svg" alt="icone whatsapp"
               /></a>
-              <span class="title">Contato</span>
             </div>
+            <span class="title">Contato</span>
           </section>
         </div>
       </div>
     </main>
+    <script src="./main.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </body>
 </html>
 
-<!-- 
-  <div class="animation">
-              <lottie-player
-                src="https://assets9.lottiefiles.com/packages/lf20_rbtawnwz.json"
-                background="transparent"
-                speed=".8"
-                loop
-                autoplay
-              ></lottie-player>
-            </div>
-          </div>
- -->
