repaginando section contact

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
           </section>
           <section class="welcome card flex">
-            <p>Bem-Vindo</p>
+          
           </section>
           <section class="profile card flex">
             <div class="profile-avatar"></div>
@@ -82,7 +82,6 @@
           </section>
           <section class="hello card flex pd-1">
             <div class="hello-message flex">
-              <span>Hello world,</span>
               <h1>DevRibeiro</h1>
             </div>
           </section>
@@ -338,7 +337,7 @@
             </div>
           </section>
           <section class="depoiments card flex pd-1">
-            <span class="title">Depoimentos</span>
+            <span class="title"></span>
           </section>
           <section class="select-mode card flex pd-1">
             <div class="avatar">
@@ -348,12 +347,26 @@
           </section>
           <section class="contact card flex pd-1">
             <ul class="contact-list">
-              <li><a href="https://www.linkedin.com/in/rafael-ribeiro-alves-48293aa2/"
-                target="_blank">Linkedin</a></li>
-              <li><a href="https://github.com/rafaelribeiro-dev" target="_blank">Github</a></li>
-              <li><a href="https://www.instagram.com/devribeiro/" target="_blank">Instagram</a></li>
-              <li><a href="https://wa.me/5511993943715?text=Olá,%20tudo%20bem?"
-                target="_blank">Whatsapp</a></li>
+              <li>
+                <buton class="button">
+                  <a href="https://www.linkedin.com/in/rafael-ribeiro-alves-48293aa2/">Linkedin</a>
+                </buton>
+              </li>
+              <li>
+                <buton class="button">
+                  <a href="https://github.com/rafaelribeiro-dev">Github</a>
+                </buton>
+              </li>
+              <li>
+                <buton class="button">
+                  <a href="https://www.instagram.com/devribeiro/">Instagram</a>
+                </buton>
+              </li>
+              <li>
+                <buton class="button">
+                  <a href="https://wa.me/5511993943715?text=Olá,%20tudo%20bem?">Whatsapp</a>
+                </buton>
+              </li>
             </ul>
           </section>
         </div>
