ajustes section mode

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
           <img src="./assets/mail.svg" alt="">
             <input class="copy-mail" type="text" value="rafael@devribeiro.com" disabled></input>
             <div class="button-copy">Copiar E-mail</div>
+            <div class="checkmark-container">
+              <svg x="0px" y="0px" fill="none" class="checkmark-svg" viewBox="0 0 25 30">
+               <path d="M2,19.2C5.9,23.6,9.4,28,9.4,28L23,2"/>
+             </svg>
+            </div>
           </section>
           <section class="hello card flex pd-1">
             <div class="hello-message flex">
