ajustes section mode

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <main>
       <div class="container">
-        <div class="apple-grid">
+
           <section class="brand card">
             <div class="brand-logo flex">
               <!-- LOGO DEVRIBEIRO -->
@@ -37,10 +37,7 @@
             </div>
             <div class="profile-about">
               <p>
-                Olá, meu nome é Rafael Ribeiro Alves, nascido em 1987 sou
-                formado em análise e desenvolvimento de sistemas pela Estácio
-                Uni Radial, amante do desenvolvimento web e interfaces bonitas,
-                comprometido e responsável com o trabalho e clientes...
+                Formado em análise de sistemas pela Faculdade Estácio, tenho trilhado esses últimos 15 anos trabalhando como vendedor. No entanto, atualmente, estou empenhado em realizar uma transição de carreira, comprometido e dedicado, sempre buscando excelência em tudo aquilo que me proponho a fazer. Sigo uma rotina diária de estudos, com foco em melhorar minhas habilidades como programador e poder contribuir com as futuras oportunidades de trabalhar com desenvolvimento.
               </p>
             </div>
           </section>
@@ -80,26 +77,9 @@
             </a>
           </section>
           <section class="mail card flex pd-1">
-            <!-- <div class="overlay flex">
-              <p>Copiar e-mail</p>
-              <button class="copy">
-                <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                fill="#FFFFFF"
-                viewBox="0 0 256 256"
-                >
-                <path
-                d="M216,28H88A12,12,0,0,0,76,40V76H40A12,12,0,0,0,28,88V216a12,12,0,0,0,12,12H168a12,12,0,0,0,12-12V180h36a12,12,0,0,0,12-12V40A12,12,0,0,0,216,28ZM156,204H52V100H156Zm48-48H180V88a12,12,0,0,0-12-12H100V52H204Z"
-                ></path>
-              </svg>
-            </button>
-            
-          </div> -->
           <img src="./assets/mail.svg" alt="">
             <input class="copy-mail" type="text" value="rafael@devribeiro.com" disabled></input>
-            <div class="button-copy">Copiar E-mail</div>
+            <div class="button-copy">Copiar Email</div>
             <div class="checkmark-container">
               <svg x="0px" y="0px" fill="none" class="checkmark-svg" viewBox="0 0 25 30">
                <path d="M2,19.2C5.9,23.6,9.4,28,9.4,28L23,2"/>
@@ -380,11 +360,14 @@
                 </div>
               </div>
             </div>
+            <label>
+              <input type="checkbox">
             <div class="toggle-btn">
               <div class="icon">
                 <i class="ph-bold ph-sun"></i>
               </div>
             </div>
+          </label>
             <img src="./assets/Sun.png" alt="imagem de sol" class="sun">
             <img src="./assets/moon.png" alt="imagem de lua" class="moon">
           </section>
@@ -434,37 +417,10 @@
               </ul>
             </div>
           </section>
-        </div>
+
       </div>
     </main>
     <script src="./main.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </body>
 </html>
-
-<!-- 
-
-  <li>
-                <buton class="button">
-                  <a href="https://www.linkedin.com/in/rafael-ribeiro-alves-48293aa2/" target="_blank">Linkedin</a>
-                </buton>
-              </li>
-              <li>
-                <buton class="button">
-                  <a href="https://github.com/rafaelribeiro-dev" target="_blank">Github</a>
-                </buton>
-              </li>
-              <li>
-                <buton class="button">
-                  <a href="https://www.instagram.com/devribeiro/" target="_blank">Instagram</a>
-                </buton>
-              </li>
-              <li>
-                <buton class="button">
-                  <a href="https://wa.me/5511993943715?text=Olá,%20tudo%20bem?" target="_blank">Whatsapp</a>
-                </buton>
-              </li>
-  -->
-
-
-  
