--- a/index.html
+++ b/index.html
@@ -85,12 +85,15 @@
         </section>
 
         <section class="hello card flex pd-1">
+          <!-- <video autoplay loop muted src="./assets/stripes.mp4" type="video/mp4"></video> -->
           <div class="hello-message flex">
             <h1>DevRibeiro</h1>
           </div>
         </section>
 
-        <section class="projects card flex pd-1"></section>
+        <section class="projects card flex pd-1">
+
+        </section>
 
         <section class="stacks card flex pd-1">
           <span class="title">Habilidades</span>
@@ -337,9 +340,9 @@
         </section>
 
         <section class="mail card flex pd-1">
-          <img src="./assets/mail.svg" alt="">
+          <img src="./assets/mail.png" alt="endereço de email devribeiro">
             <input class="copy-mail" type="text" value="rafael@devribeiro.com" disabled></input>
-            <div class="button-copy">Copiar Email</div>
+            <div class="button-copy">Copiar Email<i class="ph-bold ph-copy-simple"></i></div>
             <div class="checkmark-container">
               <svg x="0px" y="0px" fill="none" class="checkmark-svg" viewBox="0 0 25 30">
                <path d="M2,19.2C5.9,23.6,9.4,28,9.4,28L23,2"/>
