--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <section class="mail card flex pd-1">
           <img src="./assets/mail.png" alt="endereço de email devribeiro">
             <input class="copy-mail" type="text" value="rafael@devribeiro.com" disabled></input>
-            <div class="button-copy">Copiar Email<i class="ph-bold ph-copy-simple"></i></div>
+            <div class="button-copy">Copiar Email</div>
             <div class="checkmark-container">
               <svg x="0px" y="0px" fill="none" class="checkmark-svg" viewBox="0 0 25 30">
                <path d="M2,19.2C5.9,23.6,9.4,28,9.4,28L23,2"/>
