estilizando cards para modo dark

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         </section>
 
-        <section class="stacks card flex pd-1">
+        <section class="stacks card flex">
           <span class="title">Habilidades</span>
           <div class="stacks-icons flex">
             <div
