ajustes dark mode

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         </section>
 
         <section class="projects card flex pd-1">
-
+          <span>Projetos</span>
+          <div class="slider"></div>
         </section>
 
         <section class="stacks card flex">
@@ -331,11 +332,11 @@
           <img src="./assets/mail.png" alt="endereço de email devribeiro">
             <input class="copy-mail" type="text" value="rafael@devribeiro.com" disabled></input>
             <div class="button-copy">Copiar Email</div>
-            <div class="checkmark-container">
+            <!-- <div class="checkmark-container">
               <svg x="0px" y="0px" fill="none" class="checkmark-svg" viewBox="0 0 25 30">
                <path d="M2,19.2C5.9,23.6,9.4,28,9.4,28L23,2"/>
              </svg>
-            </div>
+            </div> -->
         </section>
 
         <section class="select-mode card flex pd-1">
