ajuste imagem projetos

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         </section>
 
         <section class="projects card flex pd-1">
+          <img src="./assets/Grids.svg" alt="imagem fundo grids">
           <span>Projetos</span>
 
           
