adicionando conteudo categoria projetos

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <div class="card-wrapper swiper-wrapper">
                 <div class="card-slide swiper-slide">
                   <div class="image-box">
-                    <img src="./assets/frioprime.png" alt="placeholder image" />
+                    <img src="./assets/frioprime.jpg" alt="placeholder image" />
                   </div>
                   <div class="profile-details">
                     <div class="name-job">
@@ -103,6 +103,37 @@
                       <div class="preview-icons">
                         <a href="https://www.frioprime.com.br" target="_blank"><img src="./assets/eye.svg" alt="icone olho"></a>
                         <a href="https://github.com/rafaelribeiro-dev/frioprime_v2" target="_blank"><img src="./assets/github.svg" alt="icone github"></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- SEGUNDO CARD -->
+
+                <div class="card-slide swiper-slide">
+                  <div class="image-box">
+                    <img src="./assets/portfolio.jpg" alt="placeholder image" />
+                  </div>
+                  <div class="profile-details">
+                    <div class="name-job">
+                      <h3 class="name">Portfolio</h3>
+                      <h4 class="job">
+                        O Projeto desse portfolio
+                      </h4>
+                    </div>
+                    <div class="stack-details">
+                      <h3 class="stack-title">Stack</h3>
+                      <div class="stack-icons">
+                        <img src="./assets/html5.svg" alt="">
+                        <img src="./assets/css3.svg" alt="">
+                        <img src="./assets/js.svg" alt="">
+                      </div> 
+                    </div>
+                    <div class="project-preview">
+                      <h3 class="preview-title">Preview</h3>
+                      <div class="preview-icons">
+                        <a href="https://rafaelribeiro-dev.github.io/portfolio/" target="_blank"><img src="./assets/eye.svg" alt="icone olho"></a>
+                        <a href="https://github.com/rafaelribeiro-dev/portfolio" target="_blank"><img src="./assets/github.svg" alt="icone github"></a>
                       </div>
                     </div>
                   </div>
