ajuste responsividade mobile

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="name-job">
                       <h3 class="name">Portfolio</h3>
                       <h4 class="job">
-                        O Projeto desse portfolio
+                        Projeto portfolio pessoal
                       </h4>
                     </div>
                     <div class="stack-details">
