ajuste responsividade mobile

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="name-job">
                       <h3 class="name">Portfolio</h3>
                       <h4 class="job">
-                        Projeto portfolio pessoal
+                        Projeto portfolio pessoal, colocando em prática tudo aquilo que adiquiri de conhecimento.
                       </h4>
                     </div>
                     <div class="stack-details">
@@ -138,7 +138,6 @@
                     </div>
                   </div>
                 </div>
-      
               </div>
             </div>
             <div class="swiper-button-next swiper-navBtn"></div>
