--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             </div>
           </div>
           <div class="description flex">
-            <p>Fututo aprendizado</p>
+            <p>Futuro aprendizado</p>
           </div>
         </section>
 
