--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
             <img src="./assets/Avatar.svg" alt="">
           </div>
           <div class="profile-name">
-            <h2 class="">Rafael Ribeiro Alves</h2>
-            <h3>Desenvolvedor Front-end</h3>
+            <h1>
+              Rafael Ribeiro Alves
+              <span class="role">Desenvolvedor Front-end</span>
+            </h1>
           </div>
           <div class="profile-about">
             <p>
-              Formado em análise de sistemas pela Faculdade Estácio, tenho
+              Formado em Análise e Desenvolvimento de sistemas pela Faculdade Estácio, tenho
               trilhado esses últimos 15 anos trabalhando como vendedor. No
               entanto, atualmente, estou empenhado em realizar uma transição de
               carreira, comprometido e dedicado, sempre buscando excelência em
