--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    </div> -->
     <main>
       <div class="apple-grid">
-        <section class="brand card pd-1">
+        <section class="brand card ">
           <div class="brand-logo flex">
             <img src="./assets/logo.svg" alt="logotipo devribeiro" />
           </div>
@@ -69,8 +69,8 @@
         <section class="hello card flex pd-1">
          
           <div class="hello-message flex" data-tilt data-tilt-scale="1.1" data-tilt-full-page-listening >
-            <h1>DevRibeiro</h1>
-            <img src="./assets/stroke-brand.svg" alt="devribeiro">
+            <h2>DevRibeiro</h2>
+            <img class="stroke" src="./assets/stroke-brand.svg" alt="devribeiro">
           </div>
         </section>
 
@@ -88,9 +88,9 @@
                   <div class="project-details">
                     <div class="name-job">
                       <h3 class="name">Frioprime</h3>
-                      <h4 class="job">Website desenvolvido para a empresa especializada na 
+                      <p class="job">Website desenvolvido para a empresa especializada na 
                         manutenção e instalação de equipamentos de refrigeração de ambientes.
-                      </h4>
+                      </p>
                     </div>
                     <div class="stack-details">
                       <h3 class="stack-title">Stack</h3>
@@ -119,10 +119,10 @@
                   <div class="project-details">
                     <div class="name-job">
                       <h3 class="name">Portfolio</h3>
-                      <h4 class="job">
+                      <p class="job">
                         Portfolio pessoal, projeto ao qual desenvolvi para colocar o meu conhecimento em 
                         prática e, demonstrar um pouco das minhas habilidades.
-                      </h4>
+                      </p>
                     </div>
                     <div class="stack-details">
                       <h3 class="stack-title">Stack</h3>
