--- a/index.html
+++ b/index.html
@@ -429,50 +429,52 @@
           <img src="./assets/moon.png" alt="imagem de lua" class="moon" />
         </section>
 
-        <section class="contact card flex pd-1">
-          <div class="frame">
-            <ul class="contact-list">
-              <li>
-                <button class="button">
-                  <a
-                    class="in"
-                    href="https://www.linkedin.com/in/rafael-ribeiro-alves-48293aa2/"
-                    target="_blank"
-                    >Linkedin</a
-                  >
-                </button>
-              </li>
-              <li>
-                <button class="button">
-                  <a
-                    class="git"
-                    href="https://github.com/rafaelribeiro-dev"
-                    target="_blank"
-                    >Github</a
-                  >
-                </button>
-              </li>
-              <li>
-                <button class="button">
-                  <a
-                    class="insta"
-                    href="https://www.instagram.com/devribeiro/"
-                    target="_blank"
-                    >Instagram</a
-                  >
-                </button>
-              </li>
-              <li>
-                <button class="button">
-                  <a
-                    class="whats"
-                    href="https://wa.me/5511993943715?text=Olá,%20tudo%20bem?"
-                    target="_blank"
-                    >Whatsapp</a
-                  >
-                </button>
-              </li>
-            </ul>
+        <section class="contact card flex">
+          <div class="watch">
+            <div class="frame">
+              <ul class="contact-list">
+                <li>
+                  <button class="button">
+                    <a
+                      class="in"
+                      href="https://www.linkedin.com/in/rafael-ribeiro-alves-48293aa2/"
+                      target="_blank"
+                      >Linkedin</a
+                    >
+                  </button>
+                </li>
+                <li>
+                  <button class="button">
+                    <a
+                      class="git"
+                      href="https://github.com/rafaelribeiro-dev"
+                      target="_blank"
+                      >Github</a
+                    >
+                  </button>
+                </li>
+                <li>
+                  <button class="button">
+                    <a
+                      class="insta"
+                      href="https://www.instagram.com/devribeiro/"
+                      target="_blank"
+                      >Instagram</a
+                    >
+                  </button>
+                </li>
+                <li>
+                  <button class="button">
+                    <a
+                      class="whats"
+                      href="https://wa.me/5511993943715?text=Olá,%20tudo%20bem?"
+                      target="_blank"
+                      >Whatsapp</a
+                    >
+                  </button>
+                </li>
+              </ul>
+            </div>
           </div>
         </section>
       </div>
